# parliament-gg-nnpl

./: Cargo.toml  Dioxus.toml  tailwind.config.js
assets/: tailwind.css
assets/committees/Commons/: commons committee list.json
assets/committees/Commons/Select committees/Administration Committee/: info.json  members.json
public/: tailwind.css
src/: data.rs  idk.rs  main.rs
