[package]
name = "hop-ukggannpl"
version = "0.1.0"
authors = ["Absurdnoobman <jajasamag@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web", "router"] }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
manganis = "0.2.2"
csv = "1.3.0"
serde = "1.0.200"
